--- a/app/styles/_partials.scss
+++ b/app/styles/_partials.scss
@@ -16,7 +16,7 @@ $primary-blue: #2267AB;
 $secondary-blue: #91B5C9;
 $dark-blue: #12396B;
 $blue-overlay: linear-gradient(rgba(40, 76, 222, 0.90), rgba(40, 76, 222, 0.70));
-$blue-overlay-up: linear-gradient(rgba(40, 76, 222, 0.65), rgba(40, 76, 222, 0.45));
+$blue-overlay-focus: linear-gradient(rgba(40, 76, 222, 0.65), rgba(40, 76, 222, 0.45));
 
 
 // Base link and hover colors
