--- a/app/styles/_sideContent.scss
+++ b/app/styles/_sideContent.scss
@@ -43,13 +43,10 @@ margin-top: 60px;
 }
 
 .adLink {
-  padding-left: 54%;
-  margin-top: 5px;
-}
-
-.adlink a {
-  font-size: 12px;
+  font-size: 14px;
   color: #999;
+  padding-left: 56%;
+  margin-top: 5px;
 }
 
 .sideSection h3 {
